security/linkerd/k8s/_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkerd
  labels:
    type: middleware
    tier: service-mesh
    istio-injection: disabled  # Avoid injection if Istio is also present
